--- a/tables_gain_model.tex
+++ b/tables_gain_model.tex
@@ -21,6 +21,6 @@
 \hline
 \end{tabular}
 }
-\caption{Detailed gain results.}
+\caption{Detailed gain results: model checking programs.}
 \label{tbl:results_detail_gain_model}
 \end{table}
