--- a/tables_gain_tst.tex
+++ b/tables_gain_tst.tex
@@ -21,6 +21,12 @@
 &  pyramid &  11992 &  2.19  &  1.19  &  1.29 & 0.96 \\
 &  tree &  1380 &  0.65  &  0.83  &  0.58 & 1.63 \\
 \hline
+\multirow{5}{*}{\textbf{genome}} &  chain &  24 &  382.00  &  0.83  &  802.71 & 0.50 \\
+&  cycle &  12 &  192.67  &  1.00  &  394.67 & 0.67 \\
+&  grid &  8 &  140.00  &  1.00  &  181.50 & 2.00 \\
+&  pyramid &  16 &  122.25  &  0.50  &  158.50 & 0.50 \\
+&  tree &  64 &  827.98  &  0.44  &  682.66 & 0.94 \\
+\hline
 \multirow{5}{*}{\textbf{left\_first}} &  chain &  2956 &  1.03  &  1.38  &  0.96 & 0.90 \\
 &  cycle &  6808 &  0.92  &  1.40  &  0.79 & 0.77 \\
 &  grid &  13316 &  1.14  &  1.31  &  1.06 & 1.10 \\
@@ -36,6 +42,6 @@
 \hline
 \end{tabular}
 }
-\caption{Detailed gain results.}
+\caption{Detailed gain results: \texttt{path} and \texttt{genome} programs.}
 \label{tbl:results_detail_gain_tst}
 \end{table}
