--- a/tables_model_checking.tex
+++ b/tables_model_checking.tex
@@ -20,6 +20,6 @@
 \hline
 \end{tabular}
 }
-\caption{Detailed benchmarks for call subsumption in SLG-WAM and YapTab.}
+\caption{Detailed benchmarks for call subsumption in SLG-WAM and YapTab: model checking programs.}
 \label{tbl:result_model_detail}
 \end{table}
