--- a/tables_path.tex
+++ b/tables_path.tex
@@ -35,7 +35,7 @@
 \hline
 \end{tabular}
 }
-\caption{Detailed benchmarks for call subsumption in SLG-WAM and YapTab.}
+\caption{Detailed benchmarks for call subsumption in SLG-WAM and YapTab: \texttt{double} and \texttt{left} programs.}
 \label{tbl:result_path_detail1}
 \end{table}
 
@@ -77,6 +77,6 @@
 \hline
 \end{tabular}
 }
-\caption{Detailed benchmarks for call subsumption in SLG-WAM and YapTab.}
+\caption{Detailed benchmarks for call subsumption in SLG-WAM and YapTab: \texttt{genome}, \texttt{right} and \texttt{samegen} programs.}
 \label{tbl:result_path_detail2}
 \end{table}
