--- a/tables_retro_overhead_model.tex
+++ b/tables_retro_overhead_model.tex
@@ -20,6 +20,6 @@
 \hline
 \end{tabular}
 }
-\caption{Detailed overhead results.}
+\caption{Detailed overhead results: model checking programs.}
 \label{tbl:overhead_detail_model}
 \end{table}
