--- a/tables_retro_overhead_tst.tex
+++ b/tables_retro_overhead_tst.tex
@@ -36,7 +36,7 @@
 \hline
 \end{tabular}
 }
-\caption{Detailed overhead results.}
+\caption{Detailed overhead results: \texttt{double} and \texttt{left} programs.}
 \label{tbl:overhead_detail_tst1}
 \end{table}
 
@@ -72,6 +72,6 @@
 \hline
 \end{tabular}
 }
-\caption{Detailed overhead results.}
+\caption{Detailed overhead results: \texttt{right} and \texttt{samegen} programs.}
 \label{tbl:overhead_detail_tst2}
 \end{table}
