--- a/ack.tex
+++ b/ack.tex
@@ -1,4 +1,4 @@
-I would like to thank my supervisor, Dr. Ricardo Rocha, for the help and encouragement during
+I would like to thank my supervisor, Prof. Ricardo Rocha, for the help and encouragement during
 the development of this thesis. He was always there to listen and to give advice. I have
 certainly become a better researcher because of him.
 
