--- a/retroactive.tex
+++ b/retroactive.tex
@@ -1768,7 +1768,7 @@ The retroactive subgoal frame was extended with a \textbf{try\_answer} field. Th
 to consume the available answers from the answer trie that are relevant to the subgoal
 before attempting to execute the predicate clauses.
 
-We extended both the subgoal and the dependency frame with two new fields, \textbf{prev} and
+We extended both the subgoal and the dependency frame with two new fields, \textbf{previous} and
 \textbf{next}, that are used to double link the frames on the respective stacks. These pointers
 make the operation of removing a frame from the respective stack more efficient.
 
