--- a/tables_model_checking.tex
+++ b/tables_model_checking.tex
@@ -8,18 +8,29 @@
      \multicolumn{2}{c|}{} & \textbf{\textit{Var}} & \textbf{\textit{Sub}} & \textbf{\textit{Speedup}} & \textbf{\textit{Var}} & \textbf{\textit{Sub}} & \textbf{\textit{Speedup}} \\
    \hline
    \hline
-
-\multirow{3}{*}{\textbf{reach\_first}} &  \scriptsize{iproto}  &  2940 & 2536 &  1.16  & 1188 & 1440 &  0.82 \\
-&  \scriptsize{leader}  &  5844 & 6040 &  0.97  & 2176 & 2420 &  0.90 \\
-&  \scriptsize{sieve}  &  16637 & 23413 &  0.71  & 14224 & 15064 &  0.94 \\
+   \multirow{5}{*}{\textbf{samegen}} &  \scriptsize{chain}  &  23385 & 28 &  \textbf{835.18}  & 44 & 60 &  0.73 \\
+   &  \scriptsize{cycle}  &  6176 & 12 &  \textbf{514.67}  & 32 & 28 &  1.14 \\
+   &  \scriptsize{grid}  &  2228 & 1352 &  \textbf{1.65}  & 1436 & 1068 &  1.34 \\
+   &  \scriptsize{pyramid}  &  2220 & 20 &  \textbf{111.00}  & 20 & 24 &  0.83 \\
+   &  \scriptsize{tree}  &  7132 & 8828 &  \textbf{0.81}  & 4532 & 7620 &  0.59 \\
+   \hline
+   \multirow{5}{*}{\textbf{genome}} &  \scriptsize{chain}  &  9352 & 16 &  584.50  & 19277 & 20 &  \textbf{963.85} \\
+   &  \scriptsize{cycle}  &  2324 & 8 &  290.50  & 5860 & 8 &  \textbf{732.50} \\
+   &  \scriptsize{grid}  &  1076 & 8 &  \textbf{134.50}  & 1464 & 16 &  91.50 \\
+   &  \scriptsize{pyramid}  &  1936 & 4 &  \textbf{484.00}  & 2240 & 8 &  280.00 \\
+   &  \scriptsize{tree}  &  41646 & 28 &  \textbf{1487.36}  & 43674 & 48 &  909.88 \\
+   \hline
+\multirow{3}{*}{\textbf{reach\_first}} &  \scriptsize{iproto}  &  2940 & 2536 &  \textbf{1.16}  & 1188 & 1440 &  0.82 \\
+&  \scriptsize{leader}  &  5844 & 6040 &  \textbf{0.97}  & 2176 & 2420 &  0.90 \\
+&  \scriptsize{sieve}  &  16637 & 23413 &  0.71  & 14224 & 15064 &  \textbf{0.94} \\
 \hline
-\multirow{3}{*}{\textbf{reach\_last}} &  \scriptsize{iproto}  &  2296 & 2576 &  0.89  & 1172 & 1452 &  0.81 \\
-&  \scriptsize{leader}  &  5796 & 5992 &  0.97  & 2160 & 2412 &  0.90 \\
-&  \scriptsize{sieve}  &  20653 & 19309 &  1.07  & 16861 & 14740 &  1.14 \\
+\multirow{3}{*}{\textbf{reach\_last}} &  \scriptsize{iproto}  &  2296 & 2576 &  \textbf{0.89}  & 1172 & 1452 &  0.81 \\
+&  \scriptsize{leader}  &  5796 & 5992 &  \textbf{0.97}  & 2160 & 2412 &  0.90 \\
+&  \scriptsize{sieve}  &  20653 & 19309 &  1.07  & 16861 & 14740 &  \textbf{1.14} \\
 \hline
 \hline
 \end{tabular}
 }
-\caption{Detailed benchmarks for call subsumption in SLG-WAM and YapTab: model checking programs.}
-\label{tbl:result_model_detail}
+\caption{Times and speedups for call subsumption in SLG-WAM and YapTab: \texttt{samegen}, \texttt{genome}, and model checking programs.}
+\label{tbl:result_detail_others}
 \end{table}
