--- a/tables_path.tex
+++ b/tables_path.tex
@@ -8,75 +8,46 @@
      \multicolumn{2}{c|}{} & \textbf{\textit{Var}} & \textbf{\textit{Sub}} & \textbf{\textit{Speedup}} & \textbf{\textit{Var}} & \textbf{\textit{Sub}} & \textbf{\textit{Speedup}} \\
    \hline
    \hline
-\multirow{5}{*}{\textbf{double\_first}} &  \scriptsize{chain}  &  4976 & 3536 &  1.41  & 3636 & 2520 &  1.44 \\
-&  \scriptsize{cycle}  &  30885 & 25821 &  1.20  & 36122 & 14976 &  2.41 \\
-&  \scriptsize{grid}  &  3888 & 2744 &  1.42  & 2496 & 1832 &  1.36 \\
-&  \scriptsize{pyramid}  &  20281 & 14212 &  1.43  & 21353 & 13428 &  1.59 \\
-&  \scriptsize{tree}  &  784 & 988 &  0.79  & 716 & 1380 &  0.52 \\
+   \multirow{5}{*}{\textbf{left\_first}} &  \scriptsize{chain}  &  2844 & 3908 &  0.73  & 2588 & 2416 &  \textbf{1.07} \\
+   &  \scriptsize{cycle}  &  5972 & 9364 &  0.64  & 6768 & 6056 &  \textbf{1.12} \\
+   &  \scriptsize{grid}  &  13504 & 15688 &  0.86  & 10140 & 11408 &  \textbf{0.89} \\
+   &  \scriptsize{pyramid}  &  9676 & 13552 &  0.71  & 12764 & 15012 &  \textbf{0.85} \\
+   &  \scriptsize{tree}  &  136 & 160 &  \textbf{0.85}  & 120 & 144 &  0.83 \\
+   \hline
+   \multirow{5}{*}{\textbf{left\_last}} &  \scriptsize{chain}  &  2724 & 3996 &  0.68  & 2620 & 2476 &  \textbf{1.06} \\
+   &  \scriptsize{cycle}  &  6188 & 9744 &  0.64  & 6880 & 6104 &  \textbf{1.13} \\
+   &  \scriptsize{grid}  &  13404 & 15688 &  0.85  & 10164 & 11480 &  \textbf{0.89} \\
+   &  \scriptsize{pyramid}  &  2388 & 2920 &  0.82  & 2896 & 2692 &  \textbf{1.08} \\
+   &  \scriptsize{tree}  &  128 & 156 &  0.82  & 116 & 136 &  \textbf{0.85} \\
+   \hline
+   \multirow{5}{*}{\textbf{right\_first}} &  \scriptsize{chain}  &  2840 & 2836 &  \textbf{1.00}  & 3344 & 3412 &  0.98 \\
+   &  \scriptsize{cycle}  &  6316 & 7108 &  0.89  & 6652 & 6888 &  \textbf{0.97} \\
+   &  \scriptsize{grid}  &  18061 & 15300 &  \textbf{1.18}  & 15756 & 18165 &  0.87 \\
+   &  \scriptsize{pyramid}  &  12092 & 9804 &  \textbf{1.23}  & 11832 & 11452 &  1.03 \\
+   &  \scriptsize{tree}  &  160 & 184 &  \textbf{0.87}  & 172 & 224 &  0.77 \\
+   \hline
+   \multirow{5}{*}{\textbf{right\_last}} &  \scriptsize{chain}  &  2812 & 2872 &  0.98  & 3692 & 3644 &  \textbf{1.01} \\
+   &  \scriptsize{cycle}  &  6368 & 6996 &  0.91  & 7528 & 6580 &  \textbf{1.14} \\
+   &  \scriptsize{grid}  &  19777 & 13400 &  \textbf{1.48}  & 18153 & 14260 &  1.27 \\
+   &  \scriptsize{pyramid}  &  10392 & 10472 &  0.99  & 13076 & 11420 &  \textbf{1.15} \\
+   &  \scriptsize{tree}  &  \scriptsize{crashed} & 1244 &  ---  & 416 & 1336 &  \textbf{0.31} \\
+   \hline
+\multirow{5}{*}{\textbf{double\_first}} &  \scriptsize{chain}  &  4976 & 3536 &  1.41  & 3636 & 2520 &  \textbf{1.44} \\
+&  \scriptsize{cycle}  &  30885 & 25821 &  1.20  & 36122 & 14976 &  \textbf{2.41} \\
+&  \scriptsize{grid}  &  3888 & 2744 &  \textbf{1.42}  & 2496 & 1832 &  1.36 \\
+&  \scriptsize{pyramid}  &  20281 & 14212 &  1.43  & 21353 & 13428 &  \textbf{1.59} \\
+&  \scriptsize{tree}  &  784 & 988 &  \textbf{0.79}  & 716 & 1380 &  0.52 \\
 \hline
-\multirow{5}{*}{\textbf{double\_last}} &  \scriptsize{chain}  &  5100 & 3528 &  1.45  & 3680 & 3048 &  1.21 \\
-&  \scriptsize{cycle}  &  30601 & 20293 &  1.51  & 30469 & 15172 &  2.01 \\
-&  \scriptsize{grid}  &  3896 & 2596 &  1.50  & 2492 & 1828 &  1.36 \\
-&  \scriptsize{pyramid}  &  20201 & 14196 &  1.42  & 17549 & 10724 &  1.64 \\
-&  \scriptsize{tree}  &  776 & 972 &  0.80  & 704 & 1368 &  0.51 \\
+\multirow{5}{*}{\textbf{double\_last}} &  \scriptsize{chain}  &  5100 & 3528 &  \textbf{1.45}  & 3680 & 3048 &  1.21 \\
+&  \scriptsize{cycle}  &  30601 & 20293 &  1.51  & 30469 & 15172 &  \textbf{2.01} \\
+&  \scriptsize{grid}  &  3896 & 2596 &  \textbf{1.50}  & 2492 & 1828 &  1.36 \\
+&  \scriptsize{pyramid}  &  20201 & 14196 &  1.42  & 17549 & 10724 &  \textbf{1.64} \\
+&  \scriptsize{tree}  &  776 & 972 &  \textbf{0.80}  & 704 & 1368 &  0.51 \\
 \hline
-\multirow{5}{*}{\textbf{left\_first}} &  \scriptsize{chain}  &  2844 & 3908 &  0.73  & 2588 & 2416 &  1.07 \\
-&  \scriptsize{cycle}  &  5972 & 9364 &  0.64  & 6768 & 6056 &  1.12 \\
-&  \scriptsize{grid}  &  13504 & 15688 &  0.86  & 10140 & 11408 &  0.89 \\
-&  \scriptsize{pyramid}  &  9676 & 13552 &  0.71  & 12764 & 15012 &  0.85 \\
-&  \scriptsize{tree}  &  136 & 160 &  0.85  & 120 & 144 &  0.83 \\
-\hline
-\multirow{5}{*}{\textbf{left\_last}} &  \scriptsize{chain}  &  2724 & 3996 &  0.68  & 2620 & 2476 &  1.06 \\
-&  \scriptsize{cycle}  &  6188 & 9744 &  0.64  & 6880 & 6104 &  1.13 \\
-&  \scriptsize{grid}  &  13404 & 15688 &  0.85  & 10164 & 11480 &  0.89 \\
-&  \scriptsize{pyramid}  &  2388 & 2920 &  0.82  & 2896 & 2692 &  1.08 \\
-&  \scriptsize{tree}  &  128 & 156 &  0.82  & 116 & 136 &  0.85 \\
-\hline
+
 \hline
 \end{tabular}
 }
-\caption{Detailed benchmarks for call subsumption in SLG-WAM and YapTab: \texttt{double} and \texttt{left} programs.}
-\label{tbl:result_path_detail1}
-\end{table}
-
-
-\begin{table}[ht]
-\centering
-\footnotesize{
-  \begin{tabular}{cc|ccc|ccc}
-   \hline
-    \hline
-    \multicolumn{2}{c|}{\multirow{2}{*}{\small{\textbf{Data}}}} & \multicolumn{3}{c|}{\small{\textbf{SLG-WAM}}} & \multicolumn{3}{c}{\small{\textbf{YapTab}}} \\
-     \multicolumn{2}{c|}{} & \textbf{\textit{Var}} & \textbf{\textit{Sub}} & \textbf{\textit{Speedup}} & \textbf{\textit{Var}} & \textbf{\textit{Sub}} & \textbf{\textit{Speedup}} \\
-   \hline
-   \hline
-\multirow{5}{*}{\textbf{genome}} &  \scriptsize{chain}  &  9352 & 16 &  584.50  & 19277 & 20 &  963.85 \\
-&  \scriptsize{cycle}  &  2324 & 8 &  290.50  & 5860 & 8 &  732.50 \\
-&  \scriptsize{grid}  &  1076 & 8 &  134.50  & 1464 & 16 &  91.50 \\
-&  \scriptsize{pyramid}  &  1936 & 4 &  484.00  & 2240 & 8 &  280.00 \\
-&  \scriptsize{tree}  &  41646 & 28 &  1487.36  & 43674 & 48 &  909.88 \\
-\hline
-\multirow{5}{*}{\textbf{right\_first}} &  \scriptsize{chain}  &  2840 & 2836 &  1.00  & 3344 & 3412 &  0.98 \\
-&  \scriptsize{cycle}  &  6316 & 7108 &  0.89  & 6652 & 6888 &  0.97 \\
-&  \scriptsize{grid}  &  18061 & 15300 &  1.18  & 15756 & 18165 &  0.87 \\
-&  \scriptsize{pyramid}  &  12092 & 9804 &  1.23  & 11832 & 11452 &  1.03 \\
-&  \scriptsize{tree}  &  160 & 184 &  0.87  & 172 & 224 &  0.77 \\
-\hline
-\multirow{5}{*}{\textbf{right\_last}} &  \scriptsize{chain}  &  2812 & 2872 &  0.98  & 3692 & 3644 &  1.01 \\
-&  \scriptsize{cycle}  &  6368 & 6996 &  0.91  & 7528 & 6580 &  1.14 \\
-&  \scriptsize{grid}  &  19777 & 13400 &  1.48  & 18153 & 14260 &  1.27 \\
-&  \scriptsize{pyramid}  &  10392 & 10472 &  0.99  & 13076 & 11420 &  1.15 \\
-&  \scriptsize{tree}  &  \scriptsize{crashed} & 1244 &  ---  & 416 & 1336 &  0.31 \\
-\hline
-\multirow{5}{*}{\textbf{samegen}} &  \scriptsize{chain}  &  23385 & 28 &  835.18  & 44 & 60 &  0.73 \\
-&  \scriptsize{cycle}  &  6176 & 12 &  514.67  & 32 & 28 &  1.14 \\
-&  \scriptsize{grid}  &  2228 & 1352 &  1.65  & 1436 & 1068 &  1.34 \\
-&  \scriptsize{pyramid}  &  2220 & 20 &  111.00  & 20 & 24 &  0.83 \\
-&  \scriptsize{tree}  &  7132 & 8828 &  0.81  & 4532 & 7620 &  0.59 \\
-\hline
-\hline
-\end{tabular}
-}
-\caption{Detailed benchmarks for call subsumption in SLG-WAM and YapTab: \texttt{genome}, \texttt{right} and \texttt{samegen} programs.}
-\label{tbl:result_path_detail2}
+\caption{Times and speedups for call subsumption in SLG-WAM and YapTab: \texttt{path} programs.}
+\label{tbl:result_detail_path}
 \end{table}
